# cifxx

./: .travis.yml  CMakeLists.txt  LICENSE  README.md  cifxx.hpp  generate-header.sh  pacif.hpp
cifxx/: data.hpp  parser.hpp  token.hpp  tokenizer.hpp  types.hpp  value.hpp
cmake/: CompilerFlags.cmake
pacif/: data.hpp  parser.hpp  token.hpp  tokenizer.hpp  types.hpp  value.hpp
tests/: CMakeLists.txt  data.cpp  parser.cpp  parsing.cpp  token.cpp  tokenizer.cpp  value.cpp
tests/data/: .gitignore  1544173.cif  basic.cif  it023_br.cif  loop.cif  minimal.cif  missing-data.cif  mmcif_pdbx_v50.dic.tgz  multiple_data.cif  save.cif  tags.cif  weird-loops.cif
tests/data/bad/: empty.cif  global.cif  left-bracket.cif  no-data.cif  right-bracket.cif  save-ref.cif  save.cif
